--- a/devops.html
+++ b/devops.html
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/schneider-electric/job/oas49fwz'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/schneider-electric/job/oas49fwz'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
 <p><span class="badge badge-light">Boston Bangalore Boston</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -127,7 +127,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -199,7 +199,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/263826-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/263826-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17. Juli 2019 ... NEUGELB Studios has a job opening for DevOps Engineer (m/w/d) in Frankfurt (
 published: 18.07.2019). Apply now or check the other available jobs.</p>
@@ -240,7 +240,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -269,7 +269,7 @@ leading?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -312,7 +312,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -324,11 +324,11 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -374,7 +374,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
+<h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -398,7 +398,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_capita/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=306900&localeCode=en-us'>Capita - DevOps Engineer - UK - England - London UK - England ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_capita/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=306900&localeCode=en-us'>Capita - DevOps Engineer - UK - England - London UK - England ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Let your line manager know and click apply now to a short application and send 
 us your CV. Any questions before taking the next step? You can contact Dorian.</p>
@@ -420,7 +420,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/saildrone/jobs/devops-engineer-b8ASYmRAqr6BvhaKkRyNN8'>DevOps Engineer #0103 job at Saildrone in Alameda, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/saildrone/jobs/devops-engineer-b8ASYmRAqr6BvhaKkRyNN8'>DevOps Engineer #0103 job at Saildrone in Alameda, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -460,7 +460,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
