--- a/frontend.html
+++ b/frontend.html
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... Building apps that control, direct and query our AI / Machine Learning 
 technologies, allowing our teams to train the ML models, and allowing analysts to 
@@ -159,7 +159,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://property-meld.breezy.hr/p/3ac7edfbda85-frontend-engineer-remote'>Frontend Engineer (Remote) at Property Meld</a></h5> 
+<h5><a href='https://property-meld.breezy.hr/p/3ac7edfbda85-frontend-engineer-remote'>Frontend Engineer (Remote) at Property Meld</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -260,11 +260,11 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/255638-senior-front-end-developer'>Job @ Shiji (Wroc?aw): Senior Front-end Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/255638-senior-front-end-developer'>Job @ Shiji (Wroc?aw): Senior Front-end Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -394,7 +394,7 @@ the?...</p>
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317027002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317027002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
